<resources>
    <string name="app_name">xMec</string>
    <string name="create_account">Tạo tài khoản</string>
    <string name="recovery_password">Khôi phục tài khoản</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="password">Mật khẩu</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="re_password">Nhập lại mật khẩu</string>
    <string name="re_new_password">Nhập lại mật khẩu mới</string>
    <string name="had_account"><u>Đã có tài khoản</u></string>
    <string name="forgot_pw"><u>Quên mật khẩu</u></string>
    <string name="sign_up"><u>Tạo tài khoản</u></string>
    <string name="login_fb">Đăng nhập bằng Facebook</string>
    <string name="login">Đăng nhập</string>
    <string name="enter_opt_password">Nhập mã xác nhận</string>
    <string name="otp_password">Mã xác nhận</string>
    <string name="confirm">Xác nhận</string>
    <string name="resend_otp">Gửi lại mã xác nhận</string>
    <string name="resend_otp_affter">Sau 30 giây</string>
    <string name="sologan_text">Sức khỏe của bạn là niềm vui \n của chúng tôi</string>
    <string name="btn_home_search_text"><big><b>Chuẩn đoán bệnh</b></big>\nBạn bị đau ở đâu?</string>
    <string name="text_work_time"><b>Giờ làm việc: </b></string>
    <string name="text_vote"><b>Đánh giá: </b></string>
    <string name="text_introduce"><b>Giới thiệu chung: </b></string>
    <string name="result_search_news_text">Kết quả tìm kiếm bài viết…</string>
    <string name="result_search_illnesses_text">Kết quả tìm kiếm bài bệnh…</string>
    <string name="result_search_mediacine_text">Kết quả tìm kiếm thuốc : </string>
    <string name="update_profile_text">Cập nhật thông tin</string>
    <string name="delete_friend_text">Xóa bạn bè</string>
    <string name="tong_hop">Tổng hợp</string>
    <string name="search_placeholder_text">Nhập tên bệnh, triệu chứng …</string>
    <string name="search_medicine_text">Nhập tên thuốc, tác dụng …</string>
    <string name="search_health_center">Tìm cơ sở y tế</string>
    <string name="title_activity_maps">Map</string>
    <string name="detail_hospital">Cơ sở y tế</string>
    <string name="detail_medicine">Thông tin thuốc</string>
    <string name="title_mediacal_directory">Tạo y bạ</string>
    <string name="title_profile">Thông tin cá nhân</string>
    <string name="directory_name">Tên y bạ</string>
    <string name="directory_start_time">Ngày bắt đầu </string>
    <string name="directory_end_time">Ngày kết thúc</string>
    <string name="directory_disease_name">Tên Bệnh</string>
    <string name="directory_disease_treatment">Kết quả điều trị</string>
    <string name="list_disease">Danh sách bệnh</string>
    <string name="directory_disease_note">Ghi chú</string>
    <string name="save_director_disease">Lưu Y bạ</string>
    <string name="add_medicine">Thêm thuốc</string>
    <string name="add_disease">Thêm bệnh</string>
    <string name="add_user">Thêm thành viên</string>
    <string name="title_activity_test_tab">TestTab</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="overview_text">Tổng quan</string>
    <string name="detail_text">Chi tiết</string>
    <string name="define_disease"><b>Khái quán:</b> ABC là Bệnh gì gì đấy................ ..............</string>
    <string name="symptom"><b>Triêu chứng:</b> triệu trứng của bệnh là cái gì đó viết ở đây.</string>
    <string name="diagnose"><b>Chuẩn đoán:</b> Phương pháp chuẩn đoán bệnh (xet nghiệm máu,đến gặp bác sĩ....).</string>
    <string name="treatment"><b>Điều trị:</b></string>
    <string name="disease_diagnosi">Chuẩn đoán bệnh</string>
    <string name="male">Nam</string>
    <string name="fermale">Nữ</string>
    <string name="infomation">Thông tin cá nhân</string>
    <string name="name">Họ và Tên</string>
    <string name="birthday">Ngày sinh</string>
    <string name="create_info">Tạo thông tin</string>
    <string name="height">Chiều cao</string>
    <string name="weight">Cân nặng</string>
    <string name="treatment_method">Một nghiên cứu kéo dài 8 năm từ 2000 đến 2007 nhằm đánh giá tuổi thọ kỳ vọng của những người có HIV đang điều trị ARV. Nghiên cứu này tiến hành trên gần 23.000 bệnh nhân ở Mỹ và Canada, thông qua đánh giá các thông số sinh học, từ đó phân tích tỷ lệ tử vong và tuổi thọ kỳ vọng của nhóm này. Đồng thời, các nhà khoa học cũng so sánh tuổi thọ của bệnh nhân với mặt bằng dân số chung tại thời điểm bắt đầu nghiên cứu và 8 năm sau đó.</string>


    <string name="namet_medicen_text">Tên Thuốc: </string>
    <string name="dang_bao_che">Dạng bào chết: </string>
    <string name="nhom_duoc_ly">Nhóm dược lý: </string>
    <string name="thanh_phan">Thành phần: </string>
    <string name="chi_dinh">Chỉ định: </string>
    <string name="chong_chi_dinh">Chống chỉ định: </string>
    <string name="tuong_tac_thuoc">Tương tác thuốc: </string>
    <string name="tac_dung_phu">Tác dụng phụ: </string>
    <string name="chu_y_de_phong">Chú ý đề phòng: </string>
    <string name="lieu_luong">Liều lượng: </string>
    <string name="bao_quan">Bảo quản: </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="disease_dia">Hello blank fragment</string>


    <string name="control_disease_trieu_trung">Triệu trứng bệnh</string>
    <string name="control_disease_nguyen_nhan">Nguyên Nhân</string>
    <string name="control_disease_phong_ngua">Phong ngừa</string>
    <string name="control_disease_dieu_tri">Điều trị</string>
    <string name="emtry_list_new_feed">Không có bài viết nào</string>
    <string name="register_account">Đăng kí tài khoản</string>
    <string name="recovery_account">Quên mật khẩu</string>
    <string name="update_process">Đang cập nhật</string>
    <string name="add_medical">Đang thêm y bạ</string>
    <string name="location_permission">Bạn cần cấp quyền truy cập vị trí để sử dụng tính năng này.</string>
    <string name="gps_permission">Bạn cần mở kết nối GPS để sử dụng chức năng này.</string>
    <string name="btn_location_permission">Đồng ý</string>
    <string name="btn_open_gps">Đồng ý</string>
    <string name="upload_image">Đang upload ảnh</string>
    <string name="loadding">Đang tải</string>
    <string name="reload">Tải lại danh sách</string>
    <string name="find_disease">Tìm kiếm Bệnh </string>
    <string name="find_drug">Tìm kiếm Thuốc </string>
    <string name="news">Tin tức</string>
    <string name="health_care">Cơ sở y tế</string>
    <string name="user_medical">Y bạ</string>
    <string name="no_data_disease">Không có dữ liệu về bệnh </string>
    <string name="add_medical_success">Thêm y bạ thành công</string>
    <string name="edit_disease">Sửa bệnh</string>
    <string name="title_toobar_detail_medical">Chi tiết y bạ </string>
    <string name="disease_detail">Chi tiết bệnh </string>
    <string name="remove_medical">Xóa Y bạ </string>
    <string name="remove_medical_confirm">Bạn có muốn xóa y bạ ?</string>
    <string name="tel">Tel: \t</string>
    <string name="fax">Fax: \t</string>
    <string name="address">Địa chỉ: \t</string>

    <string name="service_code_key">XTL-XMEC</string>
    <string name="FACEBOOK_APP_ID">1851247128486694</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">81a1002ad50275fa6ddf658fa6a0755f</string>
    <string name="logout">Đăng xuất</string>
    <string name="add_illness">Thêm bệnh</string>
    <string name="update_medical">Cập nhật y bạ</string>
    <string name="update_medical_success">Cập nhật Thành công</string>
    <string name="illness_name">Tên bệnh</string>
    <string name="medical_name">Tên Thuốc</string>
    <string name="list_illness">Danh sách bệnh</string>
    <string name="list_medicine">Danh sách thuốc</string>


    <string name="total_like">%d Thích</string>
    <string name="total_view">%d Lượt xem</string>
    <string name="total_comment">%d Bình luận</string>
    <string name="title_menu_y_ba">Y bạ</string>
    <string name="title_menu_tin_tuc">Tin Tức</string>
    <string name="title_tim_kiem_thuoc">Tìm kiếm thuốc</string>

    <!--map fragment-->
    <string name="title_tim_kiem_co_so_y_te">Tìm kiếm cơ sở y tế</string>
    <string name="tim_kiem_co_so_y_te_hint">Nhập tên,địa chỉ ...</string>
    <string name="map_no_search_resutl">Không tìm thấy kết quả</string>
    <string name="title_validate_phone">Xác thực</string>
    <string name="title_change_phone">Đổi mật khẩu</string>
    <string name="activity_notify">Thông báo</string>
    <string name="error_no_network">Không thể kết nối đến máy chủ.   chạm để thử lại</string>
    <string name="error_list_data_empty">Không có dữ liệu</string>
    <string name="error_no_internet">Không có kết nối mạng</string>
    <string name="message_null_data">Không có dữ liệu</string>
    <string name="title_login">Đăng nhập</string>
    <string name="message_notification">Thông báo</string>


</resources>
