<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        style="@style/Toolbar"
        app:contentInsetStart="0dp">

        <ImageView
            android:id="@+id/guillotine_hamburger"
            style="@style/ImageView.Hamburger"
            android:src="@drawable/ic_menu_black_24dp" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/itemYba"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@mipmap/ic_menu_yba" />

        <TextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/title_menu_y_ba" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/itemTinTuc"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@mipmap/ic_menu_tintuc" />

        <TextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/title_menu_tin_tuc" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/itemTimKiemBenh"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@mipmap/ic_menu_benh" />

        <TextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/find_disease" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/itemTimKiemThuoc"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@mipmap/ic_menu_thuoc" />

        <TextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/title_tim_kiem_thuoc" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/itemTimKiemCoSoYte"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@mipmap/ic_menu_cosoyte" />

        <TextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/title_tim_kiem_co_so_y_te" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/itemLogIn"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            android:id="@+id/icMenuLogin"
            style="@style/ImageView.GuillotineItem"
            android:padding="@dimen/dimen_8"
            android:src="@drawable/ic_action_logout" />

        <TextView
            android:id="@+id/textMenuLogin"
            style="@style/TextView.GuillotineItem"
            android:text="@string/login" />
    </LinearLayout>
</LinearLayout>