<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.xtelsolution.xmec.xmec.views.activity.MedicineDetailActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/detail_medicine"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="true">

        <LinearLayout
            android:id="@+id/loading_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dimen_20"
            android:layout_marginLeft="@dimen/dimen_8"
            android:layout_marginRight="@dimen/dimen_8"
            android:layout_marginTop="@dimen/dimen_25"
            android:background="@drawable/bg_shape_small_radius_white"
            android:elevation="@dimen/dimen_6"
            android:orientation="vertical"
            android:padding="@dimen/dimen_8">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_ten_thuoc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    android:text="@string/namet_medicen_text"
                    android:textColor="@color/fistText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">

                <TextView
                    android:id="@+id/tv_dang_bao_che"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/dang_bao_che"
                    android:textColor="@color/fistText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">

                <TextView
                    android:id="@+id/tv_nhom_duoc_ly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/nhom_duoc_ly"
                    android:textColor="@color/fistText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">


                <TextView
                    android:id="@+id/tv_thanh_phan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thanh_phan"
                    android:textColor="@color/fistText" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">


                <TextView
                    android:id="@+id/tv_chi_dinh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chi_dinh"
                    android:textColor="@color/fistText" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">


                <TextView
                    android:id="@+id/tv_chong_chi_dinh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chong_chi_dinh"
                    android:textColor="@color/fistText" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">


                <TextView
                    android:id="@+id/tv_tuong_tac_thuoc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tuong_tac_thuoc"
                    android:textColor="@color/fistText" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">


                <TextView
                    android:id="@+id/tv_tac_dung_phu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tac_dung_phu"
                    android:textColor="@color/fistText" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">


                <TextView
                    android:id="@+id/chu_y_de_phong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chu_y_de_phong"
                    android:textColor="@color/fistText" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">


                <TextView
                    android:id="@+id/tv_lieu_luong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lieu_luong"
                    android:textColor="@color/fistText" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">


                <TextView
                    android:id="@+id/tv_bao_quan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bao_quan"
                    android:textColor="@color/fistText" />


            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</LinearLayout>
