<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/xMecLogo"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/medical_logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="60"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/enter_opt_password"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:color/white"
            android:gravity="center"
            android:hint="@string/otp_password"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLines="1"
            android:padding="8dp" />

        <Button
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_btn_transparent"
            android:text="@string/confirm" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/resend_otp"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend_otp_affter"
            android:textSize="16sp" />

    </LinearLayout>
</LinearLayout>
