<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_update_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.xtelsolution.xmec.xmec.views.activity.UpdateInfoActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/infomation"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <agency.tango.android.avatarview.views.AvatarView
                android:layout_width="@dimen/avatar_size"
                android:layout_height="@dimen/avatar_size"
                android:src="@drawable/avaplaceholder"
                app:av_border_width="3dp" />

            <agency.tango.android.avatarview.views.AvatarView
                android:id="@+id/btn_update_avatar"
                android:layout_width="@dimen/avatar_icon_size"
                android:layout_height="@dimen/avatar_icon_size"
                android:layout_gravity="bottom|right"
                android:layout_margin="@dimen/avatar_icon_margin"
                android:src="@drawable/rund_instagram" />
        </FrameLayout>
        <EditText
            android:id="@+id/et_name"
            android:hint="@string/name"
            style="@style/EditextNomarl.Base" />
        <EditText
            android:id="@+id/et_birth_day"
            android:hint="@string/name"
            android:drawableEnd="@drawable/ic_calendar"
            style="@style/EditextNomarl.Base" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_height"
                android:layout_weight="1"
                android:hint="@string/height"
                android:layout_marginRight="8dp"
                style="@style/EditextNomarl.Base"/>
            <EditText
                android:id="@+id/et_weight"
                android:layout_weight="1"
                android:hint="@string/weight"
                style="@style/EditextNomarl.Base"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:background="@drawable/bg_button_radius_tim"
        android:textColor="@color/icons"
        android:layout_margin="16dp"
        android:layout_height="@dimen/action_button_size"
        android:text="@string/create_info"/>
</LinearLayout>
